Try again. Do it properly.

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="refresh" content="http://homepages.abdn.ac.uk/i.learmonth/pages/strigidoc.php;5">
+    <meta http-equiv="refresh" content="5; URL=http://homepages.abdn.ac.uk/i.learmonth/pages/strigidoc.php">
   </head>
   <body>
-    This website has moved.
+    This website has moved to <a href="http://homepages.abdn.ac.uk/i.learmonth/pages/strigidoc.php">http://homepages.abdn.ac.uk/i.learmonth/pages/strigidoc.php</a>.
   </body>
 </html>
 
